--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			
 			@font-face {
 				font-family: 'pfont';
-				src: url('Pfont-Bold.ttf');
+				src: url('Pfont-Light.ttf');
 				font-weight: normal;
 			}
 			
